Read from csv added, old load algorithm

--- a/Parameters.ini
+++ b/Parameters.ini
@@ -14,7 +14,8 @@ AbaqusYear = 2017
 
 [FLAGS]
 # flag for generating the INP files
-GenerateINPFile = 1
+#TODO: Turning off for load code testing
+GenerateINPFile = 0
 # Flag for running the INP files in Abaqus
 RunINPFile = 0
 # Flag for using ODB Mechens to extract the data from the odb file
@@ -30,6 +31,7 @@ curve_PARA = 0
 distal_AVW = 1
 
 
+load_search = 0
 vary_loading = 0
 NewChanges = 1
 ###### No measurements are taken if get_data is not set to 1
@@ -153,7 +155,7 @@ OutputFilePrefix =
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = I:\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Junk_Testing_Folder
-Results_Folder_Location = C:\Users\Elijah Brown\Desktop\EGR365\Pygem Modifying 2023\test loc
+Results_Folder_Location = C:\Users\Elijah Brown\Desktop\EGR365\Pygem Modifying 2023\load testing
 
 [Load]
 #NOTE: this is not the loadline, this helps find the load line number.
@@ -164,6 +166,8 @@ LoadValue = 0.01
 #LoadLine will replace the line 2 after this line:
 LoadLineSignal = ** Name: pressure   Type: Pressure
 AlternateLoads = [0.99, 1.01, 0.98, 1.02]
+#TODO: New flag to have the load while loop exit if taking too long
+MaxProlapseNum = 300
 
 
 [DENSITY]
