New load search implmented, works with test csv

--- a/Parameters.ini
+++ b/Parameters.ini
@@ -30,8 +30,8 @@ testing = 1
 curve_PARA = 0
 distal_AVW = 1
 
-
-load_search = 0
+use_test_csv = 1
+load_search = 1
 vary_loading = 0
 NewChanges = 1
 ###### No measurements are taken if get_data is not set to 1
@@ -167,7 +167,7 @@ LoadValue = 0.01
 LoadLineSignal = ** Name: pressure   Type: Pressure
 AlternateLoads = [0.99, 1.01, 0.98, 1.02]
 #TODO: New flag to have the load while loop exit if taking too long
-MaxProlapseNum = 300
+MaxProlapseNum = 30
 
 
 [DENSITY]
