Replace Normal Generic file and updated load search

--- a/Parameters.ini
+++ b/Parameters.ini
@@ -17,7 +17,7 @@ AbaqusYear = 2017
 #TODO: Turning off for load code testing
 GenerateINPFile = 1
 # Flag for running the INP files in Abaqus
-RunINPFile = 0
+RunINPFile = 1
 # Flag for using ODB Mechens to extract the data from the odb file
 
 # Flag for copying the results to a specific filename
@@ -30,12 +30,12 @@ testing = 1
 curve_PARA = 0
 distal_AVW = 1
 
-use_test_csv = 1
+use_test_csv = 0
 load_search = 1
 vary_loading = 0
 NewChanges = 1
 ###### No measurements are taken if get_data is not set to 1
-get_data = 0
+get_data = 1
 ##############################################
 get_hiatus_measurements = 0
 get_reaction_forces = 0
@@ -155,7 +155,7 @@ OutputFilePrefix =
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = I:\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Junk_Testing_Folder
-Results_Folder_Location = C:\Users\Elijah Brown\Desktop\EGR365\Pygem Modifying 2023\test loc
+Results_Folder_Location = C:\POPSIM Results\troubleshooting
 
 [Load]
 #NOTE: this is not the loadline, this helps find the load line number.
@@ -167,7 +167,7 @@ LoadValue = 0.01
 LoadLineSignal = ** Name: pressure   Type: Pressure
 AlternateLoads = [0.99, 1.01, 0.98, 1.02]
 #TODO: New flag to have the load while loop exit if taking too long
-MaxProlapseNum = 30
+MaxProlapseNum = 10
 
 
 [DENSITY]
