--- a/Parameters.ini
+++ b/Parameters.ini
@@ -204,3 +204,13 @@ Vaginal_Wall_Distance = 0
 # input for what frames to run. Should be input as "last" (no quotes) or the frames that you want "0,1,2,3" (again no quotes)
 #frames = 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50
 frames = last
+
+[FIBER_PROPERTIES]
+updated_positive_CL_point = "[x, y, z]"
+updated_negative_CL_point = "[x, y, z]"
+updated_positive_US_point = "[x, y, z]"
+updated_negative_US_point = "[x, y, z]"
+updated_positive_PARA_point = "[x, y, z]"
+updated_negative_PARA_point = "[x, y, z]"
+positive_CL_remove_percent = 0.0
+negative_CL_remove_percent = 0.0
