Fibers Update v2 (no brackets)

--- a/Parameters.ini
+++ b/Parameters.ini
@@ -206,11 +206,11 @@ Vaginal_Wall_Distance = 0
 frames = last
 
 [FIBER_PROPERTIES]
-updated_positive_CL_point = "[x, y, z]"
-updated_negative_CL_point = "[x, y, z]"
-updated_positive_US_point = "[x, y, z]"
-updated_negative_US_point = "[x, y, z]"
-updated_positive_PARA_point = "[x, y, z]"
-updated_negative_PARA_point = "[x, y, z]"
+updated_positive_CL_point = "x,y,z"
+updated_negative_CL_point = "x,y,z"
+updated_positive_US_point = "x,y,z"
+updated_negative_US_point = "x,y,z"
+updated_positive_PARA_point = "x,y,z"
+updated_negative_PARA_point = "x,y,z"
 positive_CL_remove_percent = 0.0
 negative_CL_remove_percent = 0.0
