--- a/Parameters.ini
+++ b/Parameters.ini
@@ -17,7 +17,7 @@ AbaqusYear = 2017
 #TODO: Turning off for load code testing
 GenerateINPFile = 1
 # Flag for running the INP files in Abaqus
-RunINPFile = 1
+RunINPFile = 0
 # Flag for using ODB Mechens to extract the data from the odb file
 
 # Flag for copying the results to a specific filename
@@ -31,11 +31,11 @@ curve_PARA = 0
 distal_AVW = 1
 
 use_test_csv = 0
-load_search = 1
+load_search = 0
 vary_loading = 0
 NewChanges = 1
 ###### No measurements are taken if get_data is not set to 1
-get_data = 1
+get_data = 0
 ##############################################
 get_hiatus_measurements = 0
 get_reaction_forces = 0
@@ -155,7 +155,7 @@ OutputFilePrefix =
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = I:\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Junk_Testing_Folder
-Results_Folder_Location = C:\POPSIM Results\troubleshooting
+Results_Folder_Location = C:\Users\Elijah Brown\Desktop\Bio Research\Results\INP Results
 
 [Load]
 #NOTE: this is not the loadline, this helps find the load line number.
