Update before changing dependicies from file name to log file (using run vars)

--- a/Parameters.ini
+++ b/Parameters.ini
@@ -25,6 +25,8 @@ CopyData = 0
 #Flag for curving AVW
 CurveAVW = 1
 
+Generate_Scar_Tissue = 0
+
 ######## Flags for editing
 testing = 1
 curve_PARA = 0
@@ -53,6 +55,9 @@ troubleshooting = 1
 avw_length_default = 1
 avw_width_default = 1
 avw_shift_default = 0
+
+x_mid = 0
+x_threshold_from_mid = 0
 
 # Run Values
 # Max is 1.6
