Test Push After Pygem content root

--- a/Parameters.ini
+++ b/Parameters.ini
@@ -160,7 +160,7 @@ OutputFilePrefix =
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = I:\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Junk_Testing_Folder
-Results_Folder_Location = C:\Users\Elijah Brown\Desktop\Bio Research\Results\INP Results
+Results_Folder_Location = D:\Gordon\INP Results
 
 [Load]
 #NOTE: this is not the loadline, this helps find the load line number.
