Post Process Update (flag still implemented)

--- a/Parameters.ini
+++ b/Parameters.ini
@@ -17,7 +17,7 @@ AbaqusYear = 2017
 #TODO: Turning off for load code testing
 GenerateINPFile = 1
 # Flag for running the INP files in Abaqus
-RunINPFile = 0
+RunINPFile = 1
 # Flag for using ODB Mechens to extract the data from the odb file
 
 # Flag for copying the results to a specific filename
@@ -37,7 +37,7 @@ load_search = 0
 vary_loading = 0
 NewChanges = 1
 ###### No measurements are taken if get_data is not set to 1
-get_data = 0
+get_data = 1
 ##############################################
 get_hiatus_measurements = 0
 get_reaction_forces = 0
@@ -160,7 +160,7 @@ OutputFilePrefix =
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = I:\Testing New Code\Updated_ODB_For_Testing
 #Results_Folder_Location = C:\Users\mgordon\Google Drive\Testing New Code\Junk_Testing_Folder
-Results_Folder_Location = D:\Gordon\INP Results
+Results_Folder_Location = D:\Gordon\Post Test
 
 [Load]
 #NOTE: this is not the loadline, this helps find the load line number.
